050102 Rails stupid coaching DONE until optional

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+ .callout {
+  border-left: 6px solid lightgrey;
+  padding-left: 8px;
+}
+
+.callout-warning {
+  background-color: #FFFFE1;
+}
